@@ -1,8 +1,11 @@
+2008-02-11  Robert Ancell  <robert.ancell@gmail.com>
+
+        * src/lib/gtkui/network.py: Handle unexpected throbber images (Bug #511693)
+
 2008-01-26  Andreas Røsdal  <andreasr@gnome.org>
 
 	* data/ai.xml:
 	* help/C/glchess.xml: Add support for Shredder Classic 3.
-
 
 2008-01-25  Robert Ancell  <robert.ancell@gmail.com>
 
